--- a/stylesheets/timetable.mobile.css
+++ b/stylesheets/timetable.mobile.css
@@ -10,3 +10,4 @@
 .search-result-table .quota {width:auto !important;}
 .search-result-table .enrollment {width:auto !important;}
 .search-result-table .remark {width:auto !important;}
+.search-result-table .department {width:auto !important;}
