--- a/views/snutt/timetable_header.htm
+++ b/views/snutt/timetable_header.htm
@@ -7,19 +7,22 @@
 		<meta name="og:type" content="timetable" />
 		<meta name="og:site_name" content="SNUTT" />
 		<meta name="og:description" content="서울대학교 시간표 작성 웹서비스!" />
-		<title>서울대학교 시간표</title>
+		
+		<title>서울대학교 시간표 SNUTT</title>
+		
+		<!-- jQuery -->		
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
 		<link href="/assets/stylesheets/timetable.css" media="all" rel="stylesheet" type="text/css" />
 		<link href="/assets/stylesheets/timetable.mobile.css" media="handheld, only screen and (max-device-width: 768px)" type="text/css" rel="stylesheet" />
 		<link href="/assets/stylesheets/timetable.mobile.480.css" media="handheld, only screen and (max-device-width: 480px)" type="text/css" rel="stylesheet" />
-
-		<link href="/assets/stylesheets/jquery-ui-1.8.17.custom.css" rel="stylesheet" type="text/css" />
-		<link href="/assets/stylesheets/jquery.jrating.css" rel="stylesheet" type="text/css" />
-		<link href="/assets/stylesheets/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
-		<link href="/assets/stylesheets/bootstrap-responsive.min.css" media="all" rel="stylesheet" type="text/css" />
-		<script src="/assets/javascripts/jquery.js" type="text/javascript"></script>
-		<script src="/assets/javascripts/jquery-ui-1.8.17.custom.min.js" type="text/javascript"></script>
-		<script src="/assets/javascripts/jquery.jrating.js" type="text/javascript"></script>
-		<script src="/assets/javascripts/jquery.touch-punch.js" type="text/javascript"></script>
 
 		<script src="/assets/javascripts/utils.js" type="text/javascript"></script>
 		<script src="/assets/javascripts/exportpng.js" type="text/javascript"></script>
