--- a/views/snutt/user_timetable_header.htm
+++ b/views/snutt/user_timetable_header.htm
@@ -11,7 +11,7 @@
 
 		<link href="/assets/stylesheets/user_timetable.css" media="all" rel="stylesheet" type="text/css" />
 		<link href="/assets/stylesheets/user_timetable.mobile.css" media="handheld, only screen and (max-device-width: 640px)" type="text/css" rel="stylesheet" />
-		<script src="/assets/javascripts/jquery.js" type="text/javascript"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="/assets/javascripts/user_timetable.js" type="text/javascript"></script>
 		<script type="text/javascript">
 
